# monorepo

./: .bazelrc  .bazelrc.macos  .bazelversion  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  MODULE.bazel  Makefile  deps_version.bzl  gazelle_python.yaml  go.mod  package.json  pnpm-lock.yaml  pyproject.toml  version.bzl
go/: BUILD
jvm/: MODULE.bazel
python/: BUILD  BUILD.bazel  MODULE.bazel  Makefile  defs.bzl  gazelle_python.yaml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.in  requirements.txt  requirements_lock.txt  ruff.toml  test.in
python/private/: pytest.bzl
python/setup/: make_virtual_env.sh
python/src/: BUILD
python/src/dataplatform/compute/: BUILD  __init__.py  base.py  protocol.py
python/src/dataplatform/compute/schema/: __init__.py  schema.py
python/src/dataplatform/compute/sql/: BUILD
python/src/dataplatform/execution/pipeline/: BUILD  __init__.py  graph.py
python/src/dataplatform/storage/: BUILD  protocol.py
python/tests/: BUILD.bazel  test_pygraphviz.py
python/tests/dataplatform/execution/pipeline/: BUILD  test_graph.py
rust/: BUILD.bazel  MODULE.bazel  cargo.toml
rust/sqlinguist/: Cargo.toml
tools/format/: BUILD.bazel
tools/lint/: Build.bazel  linters.bzl
