###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "monorepo",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_features", version = "1.38.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")

# Those are loaded only when using py_proto_library
bazel_dep(name = "rules_python", version = "1.7.0")

# bazel_dep(name = "rules_go", version = "0.56.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_go", version = "0.59.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_proto", version = "7.1.0")

# bazel_dep(name = "protobuf", version = "29.1", repo_name = "com_google_protobuf")
bazel_dep(name = "protobuf", version = "33.1")
bazel_dep(name = "rules_rust", version = "0.67.0")
bazel_dep(name = "rules_kotlin", version = "2.2.0")
bazel_dep(name = "rules_java", version = "9.2.0")
bazel_dep(name = "contrib_rules_jvm", version = "0.31.1")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "rules_pkg", version = "1.1.0")

# Gazelle for auto BUILD generation. See
# https://github.com/bazelbuild/rules_python/blob/main/gazelle/README.md
# First install ruleset specifc to python, then gazelle itself.
# bazel_dep(name = "rules_python_gazelle_plugin", version = "1.7.0")  # same version as rules_python
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.7.0-rc4")
bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")

bazel_dep(name = "stardoc", version = "0.8.0", dev_dependency = True, repo_name = "io_bazel_stardoc")
bazel_dep(name = "rules_bazel_integration_test", version = "0.34.0", dev_dependency = True)
bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.0.0",
    dev_dependency = True,
)

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.2")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

############ ===== DEV ONLY DEPS AND SETUP BELOW HERE ===== #######################################

bazel_binaries = use_extension(
    "@rules_bazel_integration_test//:extensions.bzl",
    "bazel_binaries",
    dev_dependency = True,
)

################################## Utils ###########################################
# Keep in sync with //:version.bzl
bazel_binaries.local(
    name = "self",
    path = "tests/integration/bazel_from_env",
)
bazel_binaries.download(version = "latests")
bazel_binaries.download(version = "rolling")
use_repo(
    bazel_binaries,
    "bazel_binaries",
    # These don't appear necessary, but are reported as direct dependencies
    # that should be use_repo()'d, so we add them as requested
    "bazel_binaries_bazelisk",
    "build_bazel_bazel_latests",
    "build_bazel_bazel_rolling",
    "build_bazel_bazel_self",
)

###################### Go #############################################
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go:go.mod")
use_repo(
    go_deps,
    "com_github_gogo_protobuf",
    "com_github_golang_mock",
    "com_github_golang_protobuf",
    "org_golang_google_genproto",
    "org_golang_google_grpc",
    "org_golang_google_grpc_cmd_protoc_gen_go_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_net",
    "org_golang_x_tools",
)
###################### Proto #############################################

###################### Python #############################################

# internal_deps = use_extension("@rules_python//python/private/bzlmod:internal_deps.bzl", "internal_deps")
# internal_deps.install()
# use_repo(
#     internal_deps,
#     "rules_python_internal",
# )

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.12",
)
use_repo(python, "pythons_hub")

register_toolchains("@pythons_hub//:all")

# Enable pip
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

# Configure how we fetch python dependencies via pip
pip.parse(
    # Use the bazel downloader for pulling pypi packages.
    experimental_index_url = "https://pypi.org/simple",
    # This name is what gets used in other BUILD files with `load()`.
    hub_name = "pypi",
    python_version = "3.12",
    requirements_lock = "//python:requirements.lock",
)

# Same as WORKSPACE install_deps() - actually install the python deps.
use_repo(pip, "pypi")

############################ JVM ##################################################################
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "org.junit.jupiter:junit-jupiter-api:5.8.2",
        "org.junit.jupiter:junit-jupiter-engine:5.8.2",
        "org.junit.platform:junit-platform-launcher:1.8.2",
        "org.junit.platform:junit-platform-reporting:1.8.2",
    ],
    fetch_sources = True,
    known_contributing_modules = [
        "bazel_worker_java",
        "monorepo",
        "protobuf",
    ],
    lock_file = "//:jvm/maven_install.json",
)
use_repo(maven, "maven")
############ ===== DEV ONLY DEPS AND SETUP BELOW HERE ===== #######################################

dev_pip = use_extension(
    "@rules_python//python/extensions:pip.bzl",
    "pip",
    dev_dependency = True,
)
dev_pip.parse(
    experimental_requirement_cycles = {
        "sphinx": [
            "sphinx",
            "sphinxcontrib-serializinghtml",
            "sphinxcontrib-qthelp",
            "sphinxcontrib-htmlhelp",
            "sphinxcontrib-devhelp",
            "sphinxcontrib-applehelp",
        ],
    },
    hub_name = "dev_pip",
    python_version = "3.12",
    requirements_lock = "//:python/requirements.lock",
)
use_repo(dev_pip, "dev_pip")
###################### RUST #############################################

GAZELLE_RUST_COMMIT = "aef7695c4a9b6c3e32255ed48570e62199f52537"

GAZELLE_RUST_SHA256 = None

http_archive(
    name = "gazelle_rust",
    sha256 = GAZELLE_RUST_SHA256,
    strip_prefix = "gazelle_rust-{}".format(GAZELLE_RUST_COMMIT),
    url = "https://github.com/Calsign/gazelle_rust/archive/{}.zip".format(GAZELLE_RUST_COMMIT),
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.77.2"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//rust:Cargo.lock",
    manifests = [
        "//rust:Cargo.toml",
        "//rust:sqlinguist/Cargo.toml",
    ],
)
use_repo(crate, "crates")

# # Example of using crate_universe. For gazelle_rust to work correctly with crate_universe
# # dependencies, this must be paired with two gazelle directives; see BUILD.bazel.
crates_repository = use_repo_rule("@rules_rust//crate_universe:defs.bzl", "crates_repository")

crates_repository(
    name = "crate_index",
    cargo_lockfile = "//:rust/Cargo.lock",
    lockfile = "//:rust/Cargo.Bazel.lock",
    manifests = [
        "//:rust/Cargo.toml",
        "//:rust/sqlinguist/Cargo.toml",
    ],
    #  packages = {
    #     "clap": crate.spec(
    #         features = ["derive"],
    #         version = "3.2",
    #     ),
    # },
)

# crate_universe_dependencies = use_extension("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")
# crate_universe_dependencies()
# crate_repositories = use_repo_rule("@gazelle_rust//3rdparty/crates:crates.bzl", "crate_repositories")

# crate_repositories()

# crate_repositories = use_extension("@rules_rust//crate_universe:defs.bzl", "crate_repositories")
# use_repo(crate_repositories, "crates_vendor__clap-4.4.18")
###################### Kotlin #############################################
