[tool.poetry]
name = "monorepo"
version = "0.1.0"
description = ""
authors = ["Abu Adan <abuadan@gmail.com>"]
packages = [{ include = "data_warehouse" }, { include = "dataplatform" }]

[tool.poetry.dependencies]
python = ">=3.11,<4"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
gunicorn = "^21.2.0"
cleo = "^2.1.0"
click = "^8.1.7"
tomlkit = "^0.12.3"
SQLAlchemy = "^2.0.25"
alembic = "^1.13.1"
pydantic = "^2.6.0"
pydantic-core = "^2.16.1"
pydantic-settings = "^2.1.0"
sqlglot = { version = "*", extras = ["rs"] }
sortedcontainers = "^2.4.0"
loguru = "^0.7.2"
notifiers = "^1.3.3"
pyspark = { version = "^3.5.1", extras = ["sql"] }
pyarrow = "^15.0.0"
numpy = "^1.26.4"
more-itertools = "^10.2.0"
django = "^5.0.3"

[tool.poetry.group.dev.dependencies]
requests = "2.31.0"
types-requests = "^2.31.0"
black = "^23.12.1"
isort = "^5.13.2"
pre-commit = "^3.6.1"
mypy = "^1.8.0"
ruff = "^0.1.14"
yamllint = "^1.34.0"
docformatter = "^1.7.5"
ipython = "^8.21.0"
bandit = "^1.7.7"
pyright = "^1.1.350"
dockerfile = "^3.3.1"
pants = "^1.0.1"

[tool.poetry.group.test.dependencies]
pytest = "7.4.4"
pytest-asyncio = "^0.15.1"
pytest-watch = "^4.2.0"
hypothesis = "^6.96.1"
pytest-icdiff = "^0.9"
pytest-xdist = "^3.5.0"
polyfactory = "^2.14.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.4"
mkdocstrings = "^0.24.0"
flake8-docstrings = "^1.6.0"

[tool.docformatter]
recursive = true
wrap-summaries = 82
blank = true

[tool.mypy]
plugins = ["pydantic.mypy"]

exclude = ['venv', '.venv', "tests"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.vscode
  | \.venv
  | build
  | dist
  | deploy
)/
'''
[tool.pyright]

exclude = ["**/node_modules", "**/__pycache__", "**/.venv"]

reportUnusedImport = false
reportUnusedVariable = false
pythonVersion = "3.11"

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra -q"

[build-system]
requires = ["poetry>=1.8.2"]
build-backend = "poetry.masonry.api"
